--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /javaweb-01-maven/target/
 /javaweb-02-servlet/servlet-01/target/
 /javaweb-02-servlet/servlet-02/target/
+/javaweb-02-servlet/response/target/
 
 # files
 
