--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /javaweb-02-servlet/servlet-01/target/
 /javaweb-02-servlet/servlet-02/target/
 /javaweb-02-servlet/response/target/
+/javaweb-02-servlet/request-01/target/
 
 # files
 
