--- a/javaweb-02-servlet/pom.xml
+++ b/javaweb-02-servlet/pom.xml
@@ -12,6 +12,7 @@
         <module>servlet-01</module>
         <module>servlet-02</module>
         <module>response</module>
+        <module>request-01</module>
     </modules>
 
     <!--https://mvnrepository.com/-->
