--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /javaweb-02-servlet/servlet-02/target/
 /javaweb-02-servlet/response/target/
 /javaweb-02-servlet/request-01/target/
+/out/
 
 # files
 
