--- a/javaweb-04-jsp/web/WEB-INF/web.xml
+++ b/javaweb-04-jsp/web/WEB-INF/web.xml
@@ -4,6 +4,15 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-
+    <!-- 配置error-page, 即出现404跳转的页面 -->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error/404.jsp</location>
+    </error-page>
+    <!-- 配置error-page, 即出现500跳转的页面 -->
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error/500.jsp</location>
+    </error-page>
 
 </web-app>
