--- a/javaweb-05-filter/pom.xml
+++ b/javaweb-05-filter/pom.xml
@@ -5,30 +5,45 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wxx</groupId>
-    <artifactId>javaweb-02-servlet</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>javaweb-05-filter</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>servlet-01</module>
-        <module>servlet-02</module>
-        <module>response</module>
-        <module>request-01</module>
-        <module>request-01</module>
-    </modules>
 
     <!--https://mvnrepository.com/-->
     <dependencies>
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <!-- Servlet 依赖 -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
+        <!-- JSP 依赖 -->
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>javax.servlet.jsp-api</artifactId>
             <version>2.3.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl-api -->
+        <!-- JSTL 表达式依赖 -->
+        <dependency>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>jstl-api</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/taglibs/standard -->
+        <!-- Standard标签库 -->
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <!-- 数据库驱动 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
         </dependency>
     </dependencies>
 
