--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 /javaweb-02-servlet/request-01/target/
 /out/
 /smbms/
+/javaweb-03-cookie-session/target/
+/javaweb-04-jsp/target/
+/javaweb-05-filter/target/
+/javaweb-06-listener/target/
 
 # files
 
